--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "monaca-template-minimum",
     "displayName": "Monaca Template Minimum",
+    "engines": {
+        "node": ">=18.16"
+    },
     "dependencies": {
-        "cordova-plugin-splashscreen": "6.0.0",
         "monaca-plugin-monaca-core": "3.3.1",
-        "cordova-plugin-camera": "6.0.0"
+        "cordova-plugin-camera": "7.0.0"
     },
     "scripts": {
         "monaca:preview": "npm run dev",
@@ -12,13 +14,12 @@
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-splashscreen": {},
             "monaca-plugin-monaca-core": {},
             "cordova-plugin-camera": {}
         }
     },
     "devDependencies": {
-        "browser-sync": "^2.24.5",
-        "cordova": "^11.0.0"
+    "browser-sync": "~2.27.7",
+    "cordova": "^12.0.0"
     }
 }
